# groupProject-backend

./: .gitignore  Dockerfile  README.md  ReadMe.md  cookies.txt  create_all_tables.sql  docker-compose.yaml  insertDummyData.sql  pyproject.toml  routes.txt  unittest.txt
.github/workflows/: backend-ci-cd.yml
app/: __init__.py  config.py  main.py
app/routes/: __init__.py  test.py
app/routes/auth/: me.py  (+8 more)
app/services/: __init__.py  media_storage.py  test.py
app/sockets/: __init__.py
app/utils/: checkPassword.py  passwords.py
documentation/: README_google_auth_and_drive.md  TESTING_google_auth_and_drive.md  generate_openapi.py  google_images_frontendGuid.md
documentation/admin/: ADMIN_API_INTEGRATION_AND_TESTING_GUIDE.md  admin_frontend_guide_otherpages.md  integrationAdminFeatures.md  testBackendAndSummary.md
documentation/googleOauth/: auth_session_role_contract.md
documentation/images/: README_frontend_integration.md  meal_images_contract.md  media_uploads_contract.md  (+2 more)
tests/: conftest.py  test_Misc.py  test_Wallet.py  test_activity_log.py  test_authRoutes.py  test_calendar.py  test_clientDashboard.py  test_coachDashboard.py  test_coachReview.py  test_coach_contracts.py  test_coach_sessions.py  test_delete_meal_plan.py  test_exerciseLogging.py  test_logFoodItem.py  test_manageClientNutrition.py  test_manage_workouts.py  test_mealPlanLibrary.py  test_mealsexercises.py  test_notifications.py  test_nutritionGoals.py  test_nutritionRoutes.py  test_onboarding.py  test_sessions.py  test_subscriptionManagement.py  test_surveyReward.py  test_workout_actions.py
(+274 files in other folders)
